--- a/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture \n",
-    "!pip install llama-index==0.10.22 llama-index-llms-openai"
+    "!pip install llama-index==0.10.25 llama-index-llms-cohere"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -66,9 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0.2)\n",
+    "llm = Cohere(model=\"command\", temperature=0.2)\n",
     "\n",
     "response = llm.complete(\"Alexander the Great was a\")\n",
     "\n",
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chat Messages"
+    "# 💭 Chat Messages"
    ]
   },
   {
@@ -121,9 +121,9 @@
    "outputs": [],
    "source": [
     "from llama_index.core.llms import ChatMessage\n",
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = Cohere(model=\"command-nightly\")\n",
     "\n",
     "messages = [\n",
     "    ChatMessage(role=\"system\", content=\"You're a hella punk bot from South Sacramento\"),\n",
@@ -144,20 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alexander the Great's conquests extended from Greece to Egypt, Persia, and parts of India. He established one of the largest empires in history, stretching over 3,000 miles from Greece to India. His conquests reshaped the political and cultural landscape of the ancient world, leaving a lasting impact on the regions he conquered.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.llms import ChatMessage, MessageRole\n",
     "from llama_index.core import ChatPromptTemplate\n",
+    "\n",
+    "llm = Cohere(model=\"command-light-nightly\")\n",
     "\n",
     "chat_template = [\n",
     "    ChatMessage(role=MessageRole.SYSTEM,content=\"You always answers questions with as much detail as possible.\"),\n",
@@ -180,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = Cohere(model=\"command\")\n",
     "\n",
     "response = llm.stream_complete(\"What happened to Alexander the Great when he arrived to Punjab?\")\n",
     "\n",
@@ -203,22 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alexander the Great never arrived in China. His empire extended to the eastern borders of Persia, but he did not venture as far as China during his conquests. Alexander's campaigns took place primarily in the Mediterranean and Middle Eastern regions."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.cohere import Cohere\n",
     "from llama_index.core.llms import ChatMessage, MessageRole\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "llm = Cohere(model=\"command\")\n",
     "\n",
     "messages = [\n",
     "    ChatMessage(role=MessageRole.SYSTEM, content=\"You're a great historian bot.\"),\n",
@@ -229,6 +215,28 @@
     "\n",
     "for r in response:\n",
     "    print(r.delta, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 💬 Chat Engine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.chat_engine import SimpleChatEngine\n",
+    "\n",
+    "llm = Cohere(model=\"command-light\")\n",
+    "\n",
+    "chat_engine = SimpleChatEngine.from_defaults(llm=llm)\n",
+    "\n",
+    "chat_engine.chat_repl()"
    ]
   }
  ],
@@ -248,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
