--- a/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!!pip install llama-index==0.10.22 html2text"
+    "!pip install llama-index==0.10.25 html2text"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "        file_path.write_text(response.text)\n",
     "        print(f\"Downloaded {filename} to {file_path}\")\n",
     "    else:\n",
-    "        print(f\"Failed to download {url}. HTTP status code: {response.status_code}\")\n"
+    "        print(f\"Failed to download {url}. HTTP status code: {response.status_code}\")"
    ]
   },
   {
@@ -328,7 +328,7 @@
     "nodes = [node1, node2]\n",
     "\n",
     "node2.relationships[NodeRelationship.PARENT] = RelatedNodeInfo(\n",
-    "    node_id=node1.node_id, metadata={\"Romie\": \"Mom\", \"Harpreet\": \"Dad\", \"Jind\":\"Sister\"}, \n",
+    "    node_id=node1.node_id, metadata={\"Romie\": \"Mom\", \"Harpreet\": \"Dad\", \"Jind\":\"Daughter\", \"Jugaad\":\"Son\"}, \n",
     ")"
    ]
   },
@@ -336,85 +336,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🗃️ **Index**\n",
-    "\n",
-    "- 📂 After loading your data, you're ready to construct an `Index` to start querying your `Document` objects or `Nodes`.\n",
-    "\n",
-    "- ❓ **What is an Index?** In `LlamaIndex`, an `Index` is a specialized data structure that contains `Document` objects, allowing for efficient querying by an LLM. It's tailored to enhance your querying approach.\n",
-    "\n",
-    "- 🌐 **Vector Store Index:** The most common Index type. It segments your `Documents` into `Nodes` and generates vector embeddings for each node's text, prepping them for LLM queries."
+    "A bit of clean up, let's just go ahead and delete the text files we downloaded since we won't need them going forward.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.core import VectorStoreIndex\n",
-    "\n",
-    "vector_index = VectorStoreIndex.from_documents(documents)\n",
-    "\n",
-    "retriever = vector_index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lower-Level API\n",
-    "\n",
-    "- ⬇️ Lower-Level API allows explicit definition of transformation steps.\n",
-    "\n",
-    "- 🧩 Use transformation modules (text splitters, metadata extractors, etc.) as standalone or in a Transformation Pipeline.\n",
-    "\n",
-    "- 📝 Split documents into \"chunks\"/Node objects for bite-sized processing optimal for LLM retrieval.\n",
-    "\n",
-    "- 🔄 LlamaIndex supports various [text splitters](https://docs.llamaindex.ai/en/stable/module_guides/loading/node_parsers/modules.html), including paragraph, sentence, token, and file-based like HTML, JSON."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import SimpleDirectoryReader\n",
-    "from llama_index.core.ingestion import IngestionPipeline\n",
-    "from llama_index.core.node_parser import TokenTextSplitter\n",
-    "\n",
-    "documents = SimpleDirectoryReader(\"./data\").load_data()\n",
-    "\n",
-    "pipeline = IngestionPipeline(\n",
-    "    transformations=[\n",
-    "        TokenTextSplitter(chunk_size=128, chunk_overlap=16)\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "nodes = pipeline.run(documents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Creating and passing Nodes directly\n",
-    "\n",
-    "You can also create nodes directly and pass a list of Nodes directly to an indexer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.schema import TextNode\n",
-    "\n",
-    "node1 = TextNode(text=\"<text_chunk>\", id_=\"<node_id>\")\n",
-    "node2 = TextNode(text=\"<text_chunk>\", id_=\"<node_id>\")\n",
-    "\n",
-    "index = VectorStoreIndex([node1, node2])"
+    "!rm -rf ./data"
    ]
   }
  ],
@@ -434,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
