--- a/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai"
+    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -35,11 +35,15 @@
    "source": [
     "# 🗂️ Indexing\n",
     "\n",
-    "In `LlamaIndex`, an `Index` is a data structure that contains `Document` objects, allowing for efficient querying by an LLM. There are several types of indexes, but we'll focus on the most commun, `VectorStoreIndex`.\n",
+    "An `Index` is a data structure that allows for the quick retrieval of relevant context for a user query. \n",
     "\n",
-    "- 🌐 **Vector Store Index:** Segments your `Documents` into `Nodes` and generates vector embeddings for each node's text, prepping them for retrieval.\n",
+    "It is the core foundation for retrieval-augmented generation (RAG) use-cases. Indexes are built from `Documents` and are used to build Retrievers, Query Engines and Chat Engines. All of which enable question & answer and chat over your data.\n",
     "\n",
-    "- 🔄 **Vector Store Index Process:** Converts all your text into embeddings with an API from your LLM, aka \"embedding your text.\"\n",
+    "- 📂 After loading your data, you're ready to construct an `Index`.\n",
+    "\n",
+    "- 🌐 **Vector Store Index:** The most common Index type. It segments your `Documents` into `Nodes` and generates vector embeddings for each node's text, prepping them for LLM queries.\n",
+    "\n",
+    "- 🔄 **Vector Store Index Process:** Parse raw texts into document objects, split document objects into chunks/nodes, then convert all your nodes into embeddings and store them in a vector database.\n",
     "\n",
     "### ⚙️ Embedding Text\n",
     "\n",
@@ -52,20 +56,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.embeddings.cohere import CohereEmbedding\n",
     "\n",
-    "te_small = OpenAIEmbedding(model=\"text-embedding-3-small\")\n",
+    "embed_v3 = CohereEmbedding(model_name=\"embed-english-v3.0\")\n",
     "\n",
-    "te_large = OpenAIEmbedding(model=\"text-embedding-3-large\")\n",
+    "embed_v3_light = CohereEmbedding(model_name=\"embed-english-light-v3.0\")\n",
     "\n",
-    "te_ada = OpenAIEmbedding(model=\"text-embedding-ada-002\") "
+    "embed_v2 = CohereEmbedding(model_name=\"embed-english-v2.0\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also use local embedding models, by using an embedding model from Hugging Face.\n",
+    "#### You can also use local embedding models, by using an embedding model from Hugging Face. Check the [MTEB Leaderboard for what's hot](huggingface.co/spaces/mteb/leaderboard)\n",
     "\n",
     "```python\n",
     "\n",
@@ -74,6 +78,18 @@
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "\n",
     "hf_embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-small-en-v1.5\")\n",
+    "```\n",
+    "\n",
+    "#### If you're running locally and on a CPU, though, you may want to use `FastEmbed`. These models are lightweight, quantized, and optimized for CPU. Here are the [supported models](https://qdrant.github.io/fastembed/examples/Supported_Models/)\n",
+    "\n",
+    "This is how you can instantiate a `FastEmbed` model:\n",
+    "\n",
+    "```python\n",
+    "pip install llama-index-embeddings-fastembed\n",
+    "\n",
+    "from llama_index.embeddings.fastembed import FastEmbedEmbedding\n",
+    "\n",
+    "embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-large-en-v1.5-quantized\")\n",
     "```"
    ]
   },
@@ -105,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_embedding = te_small.get_text_embedding(string)"
+    "example_embedding = embed_v3.get_text_embedding(string)"
    ]
   },
   {
@@ -137,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_embedding_dimensions(te_small, [string, string_2, string_3])"
+    "get_embedding_dimensions(embed_v3, [string, string_2, string_3])"
    ]
   },
   {
@@ -146,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_embedding_dimensions(te_large, [string, string_2, string_3])"
+    "get_embedding_dimensions(embed_v3_light, [string, string_2, string_3])"
    ]
   },
   {
@@ -155,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_embedding_dimensions(te_ada, [string, string_2, string_3])"
+    "get_embedding_dimensions(embed_v2, [string, string_2, string_3])"
    ]
   },
   {
@@ -164,11 +180,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "te_ada.similarity(\n",
-    "    te_ada.get_text_embedding(\"\"\"In embracing both the wisdom of the Sikh Gurus and the Stoic philosophers, \n",
+    "embed_v3.similarity(\n",
+    "    embed_v3.get_text_embedding(\"\"\"In embracing both the wisdom of the Sikh Gurus and the Stoic philosophers, \n",
     "                              we find a path to tranquility by accepting what is beyond our control and focusing \n",
     "                              our efforts on living virtuously and with purpose.\"\"\"), \n",
-    "    te_ada.get_text_embedding(string_2),\n",
+    "    embed_v3.get_text_embedding(string_2),\n",
     "    mode=\"cosine\"\n",
     "    )"
    ]
@@ -184,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,23 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsing nodes: 100%|██████████| 1/1 [00:00<00:00, 83.77it/s]\n",
-      "Generating embeddings: 100%|██████████| 3/3 [00:00<00:00,  5.98it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "index = VectorStoreIndex.from_documents(\n",
     "    # remember, you must pass a list of documents!\n",
     "    [partial_document], \n",
-    "    embed_model=te_small,\n",
+    "    embed_model=embed_v3,\n",
     "    show_progress=True)"
    ]
   },
@@ -265,17 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating embeddings: 100%|██████████| 6/6 [00:00<00:00, 15.39it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
@@ -292,7 +291,7 @@
     "# create the index from the nodes\n",
     "index_from_nodes = VectorStoreIndex(\n",
     "    nodes,\n",
-    "    embed_model=te_small,\n",
+    "    embed_model=embed_v3,\n",
     "    show_progress=True\n",
     "    )"
    ]
@@ -301,15 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retrieval from `VectorStoreIndex`\n",
-    "\n",
-    " - 🔍 When searching, your query is also converted into a vector embedding. \n",
-    " \n",
-    "- The `VectorStoreIndex` then performs a mathematical operation to rank embeddings based on semantic similarity to your query.\n",
-    "\n",
-    "- 🔝 Top-k semantic retrieval is the simplest wasy to query a vector index. \n",
-    "\n",
-    "We'll discuss querying in it's own section!"
+    "Let's build on this pattern in the next lesson, where we'll store and persist our index for future use."
    ]
   }
  ],
@@ -329,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
