--- a/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere llama-index-llms-cohere qdrant-client llama-index-vector-stores-qdrant "
    ]
   },
   {
@@ -26,14 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Storing\n",
+    "# 🗄️ Storing\n",
     "\n",
     "Loading and indexing data costs time and money.\n",
     "\n",
@@ -91,7 +91,7 @@
     "\n",
     "file_path = \"data/pg10763.txt\"\n",
     "\n",
-    "document = SimpleDirectoryReader(input_files=[file_path], filename_as_id=True).load_data()\n"
+    "document = SimpleDirectoryReader(input_files=[file_path], filename_as_id=True).load_data()"
    ]
   },
   {
@@ -119,10 +119,10 @@
    "outputs": [],
    "source": [
     "# create index\n",
-    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.embeddings.cohere import CohereEmbedding\n",
     "from llama_index.core import  VectorStoreIndex\n",
     "\n",
-    "embed_model = OpenAIEmbedding(model=\"text-embedding-3-small\")\n",
+    "embed_model = CohereEmbedding(model_name=\"embed-english-v3.0\")\n",
     "\n",
     "index = VectorStoreIndex(nodes, embed_model=embed_model)"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the `.persist()` method of the index to store the indexed data to disk."
+    "Use the `.persist()` method of the index to store the indexed data to disk. Now you can avoid re-loading and re-indexing your data by loading the persisted index."
    ]
   },
   {
@@ -147,7 +147,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can avoid re-loading and re-indexing your data by loading the persisted index."
+    "# 🗃️ Storege Context\n",
+    "\n",
+    "`StorageContext` in `LlamaIndex` is a core abstraction that revolves around the storage of `Nodes`, indices, and vectors. \n",
+    "\n",
+    "It is a utility container that includes the following:\n",
+    "\n",
+    " - `docstore`: A [`BaseDocumentStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/docstore/types.py) for storing nodes.\n",
+    "\n",
+    " - `index_store`: A [`BaseIndexStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/storage/index_store/types.py#L13) for storing indices.\n",
+    "\n",
+    " - `vector_store`: A [`VectorStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/vector_stores/simple.py) for storing vectors.\n",
+    "\n",
+    " - `graph_store`: A [`GraphStore`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/graph_stores/simple.py) for storing knowledge graphs.\n",
+    "\n",
+    "The `StorageContext` can be created with default settings, comprising a document store, index store, vector store, and graph store. It enables storing the context in a specific directory, facilitating data storage and retrieval from disk to save time and indexing expenses."
    ]
   },
   {
@@ -166,23 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: If the index is initialized with a custom `transformation`, `embed_model`, etc. then you need to pass those same options during `load_index_from_storage`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = load_index_from_storage(storage_context, embed_model=embed_model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Using a Vector Database\n",
+    "# ☁️ Using a Vector Database\n",
     "\n",
     "We'll use qdrant as our vector database of choice throughout this course.\n",
     "\n",
@@ -196,9 +194,7 @@
     "\n",
     "- Initialize your `VectorStoreIndex` using that `StorageContext`\n",
     "\n",
-    "Below, we initialize a `QdrantClient` for interacting with qdrant, an open-source vector store. \n",
-    "\n",
-    "We use `location=\":memory:\"` for in-memory operations, ideal for quick, lightweight experiments without needing an external qdrant deployment. "
+    "Below, we initialize a `QdrantClient` for interacting with qdrant, an open-source vector store. \n"
    ]
   },
   {
@@ -230,126 +226,90 @@
     "# create the index\n",
     "index = VectorStoreIndex(\n",
     "    nodes,\n",
+    "    embed_model=embed_model,\n",
     "    storage_context=storage_context\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sneak peek at querying"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_engine = index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_engine.query(\"What lessons can be learned from the poems about success?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_engine.query(\"Does this book include a poem titled Start Where You Stand?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Inserting Documents or Nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import Document\n",
+    ")\n",
     "\n",
-    "my_poem = \"\"\"Beneath the endless sky, where stars do meet the eye,\n",
-    "A path of inner peace, where truth and duty lie.\n",
-    "In the heart of a Sikh, where the Guru's wisdom flows,\n",
-    "And in the Stoic's mind, where calm reflection grows.\n",
-    "\n",
-    "\"Accept what life may bring,\" the Stoic gently teaches,\n",
-    "\"Embrace your fate with grace,\" their quiet wisdom reaches.\n",
-    "The Sikh, in vibrant faith, sees God in all, not some,\n",
-    "In service and in love, their kindred spirits come.\n",
-    "\n",
-    "Through storms and tranquil days, their journey is the same,\n",
-    "To live with virtue's light, and keep alive the flame.\n",
-    "For in the end, it's not the riches or the fame,\n",
-    "But how we played the game, and honored life's true name.\n",
-    "\n",
-    "So, let us walk this path, with courage, love, and grace,\n",
-    "United in our quest, in this vast human race.\n",
-    "A Sikh Stoic's heart, where peace and duty blend,\n",
-    "On this eternal road, that winds and never ends.\n",
-    "\"\"\"\n",
-    "\n",
-    "poem_document = Document(text=my_poem)\n",
-    "\n",
-    "index.insert(poem_document)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = query_engine.query(\"Are there any poems about Sikh and Stoic philosophy?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response.__dict__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's persist the `qdrant` index to disk for future use."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# You can persist the `qdrant` index to disk for future use\n",
     "index.storage_context.persist(persist_dir=\"persisted_storage/qdrant\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🪃 Retrieval\n",
+    "\n",
+    "A `Retriever` is an interface exposed by the `Index`. An `Index` with its `Retriever` is used for storing and fetching data. The `Retriever` is a part of the `Index` and is used to retrieve the data stored in the Index.\n",
+    "\n",
+    "\n",
+    "### LlamaIndex provides [many different types of retrievers](https://github.com/run-llama/llama_index/tree/main/llama-index-core/llama_index/core/retrievers) to fetch relevant information from ingested data based on a given query. \n",
+    "\n",
+    "Some examples include\n",
+    "\n",
+    "### Vector Retriever\n",
+    "\n",
+    "The vector retriever uses vector similarity search to find the most relevant nodes (chunks of text) based on the query embedding. It requires a vector database like to store and search through the node embeddings.\n",
+    "\n",
+    "### [Fusion Retriever](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/retrievers/fusion_retriever.py)\n",
+    "\n",
+    "The fusion retriever generates multiple queries from the original query, performs retrieval over an ensemble of retrievers for each query, and then fuses and reranks the results across all queries. This aims to better capture the query intent through query rewriting and ensembling.\n",
+    "\n",
+    "### [Recursive Retriever](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/retrievers/recursive_retriever.py)\n",
+    "\n",
+    "The recursive retriever allows for hierarchical retrieval by first retrieving coarse nodes and then recursively retrieving finer-grained nodes within those coarse nodes. This can be useful for multi-level indexing and retrieval.\n",
+    "\n",
+    "You can also combine retrievers in interesting ways and build out more advanced retrieval strategies, as we will see later in this course.\n",
+    "\n",
+    "\n",
+    "### In the example here, we're using a Vector Retriever\n",
+    "\n",
+    " - 🔍 When searching, your query is also converted into a vector embedding. \n",
+    " \n",
+    "- 🗂️ The `VectorStoreIndex` then performs a mathematical operation to rank embeddings based on semantic similarity to your query.\n",
+    "\n",
+    "- 🔝 Top-k semantic retrieval is the simplest wasy to query a vector index.\n",
+    "\n",
+    "- ⩬ You can also apply a similarity threshold  (e.g., only return results that are more similar than some value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retirever = index.as_retriever(\n",
+    "    similarity_top_k=5,\n",
+    "    similarity_threshold=0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retirever.retrieve(\"What lessons can be learned from the poems about success?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But, chances are you don't just want the returned documents. You want the documents to be synthesized into a response. \n",
+    "\n",
+    "So, let's build on this pattern in the next lesson and see how we can get a response based on those retrieved documents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close the client so you're not locked out of the index\n",
+    "client.close()"
    ]
   }
  ],
@@ -369,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
