--- a/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere llama-index-llms-cohere qdrant-client llama-index-vector-stores-qdrant "
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -50,13 +50,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "file_path = 'persisted_storage/qdrant/docstore.json'\n",
+    "print(os.path.exists(file_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import qdrant_client\n",
-    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.embeddings.cohere import CohereEmbedding\n",
     "from llama_index.core import VectorStoreIndex\n",
     "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "from llama_index.core import StorageContext\n",
     "\n",
-    "embed_model = OpenAIEmbedding(model=\"text-embedding-3-small\")\n",
+    "embed_model = CohereEmbedding(model_name=\"embed-english-v3.0\")\n",
     "\n",
     "# initialize qdrant client\n",
     "client = qdrant_client.QdrantClient(\n",
@@ -90,13 +102,19 @@
    "source": [
     "# 🧐 The `QueryEngine`\n",
     "\n",
-    "The `QueryEngine` is the foundation of all querying. Here's what happens under the hood:\n",
+    "A Query Engine is a higher-level construct that uses an `Index` (and by extension, a `Retriever`) to answer queries. \n",
+    "\n",
+    "It not only retrieves the relevant data but also processes it to generate a response to the query. A `Query Engine` uses the `Retriever` to fetch data and then applies additional logic to generate a response.\n",
+    "\n",
+    "Here's what happens under the hood:\n",
     "\n",
     "- 📚 **Retrieval**: Find and return the most relevant documents from the `Index` using strategies like \"top-k\" semantic retrieval.\n",
     "\n",
     "- 🔧 **Postprocessing**: Optionally rerank, transform, or filter retrieved Nodes, often based on specific metadata like keywords.\n",
     "\n",
-    "- 🔄 **Response Synthesis**: Combine the query, relevant data, and prompt to generate a response from your LLM.\n"
+    "- 🔄 **Response Synthesis**: Combine the query, relevant data, and prompt to generate a response from your LLM.\n",
+    "\n",
+    "Note, there are [a wide variety of Query Engines](https://github.com/run-llama/llama_index/tree/main/llama-index-core/llama_index/core/query_engine) available in LlamaIndex. We won't touch on all of them in this course, but I encourage you to explore what's available and think of how you may be able to use them.\n"
    ]
   },
   {
@@ -105,13 +123,120 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine()\n",
+    "from llama_index.llms.cohere import Cohere\n",
+    "\n",
+    "llm = Cohere(model=\"command-r\")\n",
+    "\n",
+    "query_engine = index.as_query_engine(llm=llm, streaming=True)\n",
     "\n",
     "response = query_engine.query(\n",
     "    \"What do the Sikh Stoics believe?\"\n",
     ")\n",
     "\n",
-    "print(response)"
+    "response.print_response_stream()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Streaming response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\n",
+    "    \"What poems by Rudyard Kipling are in this book?\"\n",
+    ")\n",
+    "\n",
+    "response.print_response_stream()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 💬 Chat Engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_engine = index.as_chat_engine(llm=llm)\n",
+    "\n",
+    "chat_engine.chat_repl()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chat modes\n",
+    "\n",
+    "#### Simple\n",
+    "\n",
+    "Chat with LLM, without making use of a knowledge base. To use this mode set `chat_mode=\"simple\"`.\n",
+    "\n",
+    "Corresponds to [`SimpleChatEngine`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/chat_engine/simple.py). \n",
+    "\n",
+    "#### Condense question\n",
+    "\n",
+    "Generate a standalone question from the conversation context and the last message. Then, ask the query engine for a response. To use this mode set `chat_mode=\"condense_question\"`.\n",
+    "\n",
+    "Corresponds to [`CondenseQuestionChatEngine`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/chat_engine/condense_question.py).\n",
+    "\n",
+    "#### Context \n",
+    "\n",
+    "Retrieve text from the index based on the user's message. Utilize this context to formulate a response. To use this mode set `chat_mode=\"context\"`.\n",
+    "\n",
+    "Corresponds to [`ContextChatEngine`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/chat_engine/context.py).\n",
+    "\n",
+    "#### Condense plus context\n",
+    "\n",
+    "Condense a conversation and latest user message to a standalone question. Then build a context for the standalone question from a retriever. Finally, pass the context along with prompt and user message to LLM to generate a response. To use this mode set `chat_mode=\"condense_plus_context\"`.\n",
+    "\n",
+    "Corresponds to [`CondensePlusContextChatEngine`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/chat_engine/condense_plus_context.py).\n",
+    "\n",
+    "#### ReACT\n",
+    "Corresponds to [`ReActAgent`](https://github.com/run-llama/llama_index/blob/37c95965426bddae82cec1ad49d3aa82e8bfe819/llama-index-core/llama_index/core/agent/react/base.py#L36).\n",
+    "\n",
+    "Use a ReAct agent loop with query engine tools. To use this mode set `chat_mode=\"react\"`.\n",
+    "\n",
+    "#### Best\n",
+    "\n",
+    "Select the best chat engine based on the current LLM. To use this mode set `chat_mode=\"best\"`.\n",
+    "\n",
+    "Corresponds to `OpenAIAgent` if using an OpenAI model that supports function calling API, otherwise, corresponds to `ReActAgent`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.memory import ChatMemoryBuffer\n",
+    "\n",
+    "memory = ChatMemoryBuffer.from_defaults(token_limit=1500)\n",
+    "\n",
+    "chat_engine = index.as_chat_engine(\n",
+    "    llm=llm,\n",
+    "    chat_mode=\"context\",\n",
+    "    memory=memory,\n",
+    "    system_prompt=(\n",
+    "        \"You are a chatbot, able to have normal interactions, as well as talk\"\n",
+    "        \" about a book of poems called 'It Can Be Done'.\"\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "chat_engine.chat_repl()"
    ]
   },
   {
@@ -145,10 +270,10 @@
     ")\n",
     "\n",
     "# configure a post processor\n",
-    "similarity_processor = SimilarityPostprocessor(similarity_cutoff=0.84)\n",
+    "similarity_processor = SimilarityPostprocessor(similarity_cutoff=0.42)\n",
     "\n",
     "# configure a response sythesizer\n",
-    "response_synthsizer = get_response_synthesizer()\n",
+    "response_synthsizer = get_response_synthesizer(llm=llm)\n",
     "\n",
     "# create a query engine\n",
     "query_engine = RetrieverQueryEngine(\n",
@@ -175,6 +300,15 @@
    "source": [
     "query_engine.query(\"Compare the portrayal of internal versus external battles in the narratives and poems\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
+   ]
   }
  ],
  "metadata": {
@@ -193,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
