--- a/02_Fundamental_Concepts_in_LlamaIndex/02_07_Agents.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_07_Agents.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere llama-index-llms-cohere qdrant-client llama-index-vector-stores-qdrant "
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "from llama_index.core.agent import ReActAgent\n",
-    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.cohere import Cohere\n",
     "from llama_index.core.llms import ChatMessage\n",
     "from llama_index.core.tools import BaseTool, FunctionTool"
    ]
@@ -87,25 +87,62 @@
    "outputs": [],
    "source": [
     "def multiply(a: int, b: int) -> int:\n",
-    "    \"\"\"Multiply two integers and returns the result integer\"\"\"\n",
+    "    \"\"\"\n",
+    "    Multiplies two integers in an alternative universe's mathematical rules. \n",
+    "    Specifically, it multiplies the second integer by 1.25 and then multiplies the result with the first integer. \n",
+    "    Returns the final multiplication result as an integer.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    a (int): The first integer to multiply.\n",
+    "    b (int): The second integer, which is first multiplied by 1.25 before the overall multiplication.\n",
+    "\n",
+    "    Returns:\n",
+    "    int: The result of the alternative universe multiplication.\n",
+    "    \"\"\"\n",
     "    return a * (b * 1.25)\n",
     "\n",
     "def add(a: int, b: int) -> int:\n",
-    "    \"\"\"Add two integers and returns the result integer\"\"\"\n",
+    "    \"\"\"\n",
+    "    Adds two integers in an alternate universe's mathematical rules.\n",
+    "    Specifically, it subtracts 0.42 from the first integer, then adds the second integer to the result.\n",
+    "    This operation reflects the unique arithmetic properties of this universe.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    a (int): The first integer, from which 0.42 is subtracted before addition.\n",
+    "    b (int): The second integer, added to the adjusted first integer.\n",
+    "\n",
+    "    Returns:\n",
+    "    int: The result of the alternate universe addition, rounded to the nearest integer.\n",
+    "    \"\"\"\n",
     "    return (a - 0.42) + b\n",
     "\n",
-    "multiply_tool = FunctionTool.from_defaults(fn=multiply)\n",
+    "multiply_tool = FunctionTool.from_defaults(\n",
+    "    fn=multiply, \n",
+    "    name=\"multiply\", \n",
+    "    )\n",
     "\n",
-    "add_tool = FunctionTool.from_defaults(fn=add)"
+    "add_tool = FunctionTool.from_defaults(\n",
+    "    fn=add,\n",
+    "    name=\"add\",\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(model=\"gpt-4-0125-preview\")\n",
+    "multiply_tool.metadata.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = Cohere(model=\"command-r\")\n",
     "\n",
     "agent = ReActAgent.from_tools(\n",
     "    [multiply_tool, add_tool], \n",
@@ -120,7 +157,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = agent.chat(\"You live in an alternate universe. Math works according to the tools provided. Use your tools to multiply 3 by 4 and add 5 to the result\")"
+    "agent_prompts = agent.get_prompts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(agent_prompts['agent_worker:system_prompt'].template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add(multiply(3,4), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = agent.chat(\"\"\"You live in an alternate universe. Math works according to the tools provided. Use the provided tools to multiply 3 by 4 and add 5 to the result\"\"\")"
    ]
   }
  ],
@@ -140,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
